objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ON_Template__c</fullName>
        <description>Specifies the Salesforce ID of the related template.</description>
        <formula>"a301t000001DWwC"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_Title__c</fullName>
        <description>The name or short description of the invoice line item.</description>
        <formula>"&lt;span style='font-size:8pt;'&gt;Vorgang " + Number__c + ":&lt;br&gt;" + ON_MailingLastName__c  + " ./. " + Vehicle_Brand__r.Name + "&lt;br&gt;(" + TEXT(ON_CompensationRate__c * 100) + " % " + IF(ON_CompensationRateInclTax__c, "inkl. USt", "zzgl. USt") + " aus " + IF( ON_ObtainedAmount__c &gt;= 1000000, TEXT(FLOOR(ON_ObtainedAmount__c / 1000000)) + ".", "") + IF(ON_ObtainedAmount__c &gt;= 1000, RIGHT(TEXT(FLOOR(ON_ObtainedAmount__c / 1000)), 3) + ".", "") + RIGHT(TEXT(FLOOR(ON_ObtainedAmount__c)), 3) + "," + IF(MOD(ON_ObtainedAmount__c , 1) * 100 &lt; 10, "0" + TEXT(ROUND(MOD(ON_ObtainedAmount__c , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ON_ObtainedAmount__c , 1), 2) * 100, 99))) + " € " + "&lt;br&gt;lt. Vereinbarung vom " + IF(LEN(TEXT(DAY(ON_MandateDate__c))) &gt; 1 , TEXT(DAY(ON_MandateDate__c)), "0" + TEXT(DAY(ON_MandateDate__c))) + "." + IF( LEN(TEXT(MONTH(ON_MandateDate__c))) &gt; 1 , TEXT(MONTH(ON_MandateDate__c)), "0" + TEXT(MONTH(ON_MandateDate__c))) + "." + TEXT(YEAR(ON_MandateDate__c)) + ")&lt;/span&gt;"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_UnitPrice__c</fullName>
        <description>The net price of one unit of this item.</description>
        <formula>Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Anfrage_ID__c</fullName>
        <label>Old Anfrage ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Number__c</fullName>
        <label>Alte Bearbeitungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityImpID__c</fullName>
        <externalId>true</externalId>
        <label>OpportunityImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Type__c</fullName>
        <label>Sonstige Finanzierungsart</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Is_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fahrzeughalter ist Unternehmen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Installments__c</fullName>
        <label>Bisher geleistete Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Up_Contributions__c</fullName>
        <label>Eingezahlte Beiträge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partial_Refund__c</fullName>
        <label>Teilerstattungsbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_External_Id_Input__c</fullName>
        <label>Partner External Id Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_External_Id__c</fullName>
        <formula>Partner__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <label>Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner)</relationshipLabel>
        <relationshipName>Opportunities_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passed_Follow_up_Journey2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Follow up Journey2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Zahlweise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payout_Amount__c</fullName>
        <label>Auszahlungsbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Policy_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Policy_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Policy_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Date__c</fullName>
        <label>Datum des Versicherungsscheins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_20__c</fullName>
        <formula>Potential__c * 0.8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential - 20%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <label>Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <formula>IF(Insurance__c = null,'',CASE(Insurance__r.External_Id__c,'lv001','I','lv002','I','lv104','I','lv003','I','lv106','I','lv032','I','lv039','I','lv031','I','lv046','I','lv071','I','lv047','I','lv053','I','lv008','I','lv005','I','lv067','I', 'lv068','I', 'lv089','I','lv054','I','lv048','I', 'lv049','I', 'lv045','I', 'lv035','I', 'lv098','I', 'lv016','I', 'lv027','I', 'lv078','I', 'lv009','I', 'lv034','I','lv777','I','lv004','II','III'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prioritätsstufe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Anspruchstyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Process_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Mode__c</fullName>
        <label>Bearbeitung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Modes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date_Category__c</fullName>
        <label>Kaufdatum Kategorie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Purchase_Date_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Purchase_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Purchase_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Purchase_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Kaufdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_Clean__c</fullName>
        <label>Purchase Price Clean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Kaufpreis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_For_Loss__c</fullName>
        <label>Absagegrund</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reasons_For_Loss</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Aktenzeichen</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Erstattungsbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Zulassungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nur noch für Formstack-Landingpages im System. Kann gelöscht werden, sobald diese nicht mehr existieren.</description>
        <label>[Delete] Rendite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revocation_Instruction_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wiederspruchvereinbarung fehlt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <label>Verkaufsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Verkaufspreis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <defaultValue>"Online"</defaultValue>
        <label>Vertriebstyp</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>Contact__r.Salutation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <formula>Contact__r.Second_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zweite Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2. Anwalt</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Anfragen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Legal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2. Kanzlei</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Anfragen (2. Kanzlei)</relationshipLabel>
        <relationshipName>Anfragen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <formula>Contact__r.Second_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zweites Telefon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Backoffice_Date__c</fullName>
        <label>Set Backoffice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_Callcenter_Date__c</fullName>
        <label>Set Callcenter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_To_Check_Date__c</fullName>
        <label>Set To Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_To_Claim_Date__c</fullName>
        <label>Set To Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_To_Lost_Date__c</fullName>
        <label>Set To Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_To_New_Date__c</fullName>
        <label>Set To New Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_To_On_Hold_Date__c</fullName>
        <label>Set To On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>CASE((AdWords_Source__c ), 
"kwanko", "Kwanko",
"taboola", "Taboola",
" ")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quelle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_is_set_to_Claim__c</fullName>
        <formula>IF(ISPICKVAL(StageName, "Claim"),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ist an Anwalt übergeben</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Started_Auto_Follow_up_Journey_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started Auto-Follow-up Journey 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Started_Auto_Follow_up_Journey_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started Auto-Follow-up Journey 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Started_Auto_Follow_up_Journey_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started Auto-Follow-up Journey 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surrender_Value_Date__c</fullName>
        <label>Datum Rückkaufswert</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surrender_Value__c</fullName>
        <label>Rückkaufswert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <externalId>true</externalId>
        <label>Tag</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Controller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Kündigungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nur noch für Formstack-Landingpages im System. Kann gelöscht werden, sobald diese nicht mehr existieren.</description>
        <label>[Delete] Bereits gekündigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Version__c</fullName>
        <label>Strecke</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Web form token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Abmeldung__c</fullName>
        <formula>$Label.SiteRoot + '/Abmelden?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Abmeldung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_ConfirmNewsletter__c</fullName>
        <formula>$Label.SiteRoot + '/ConfirmNewsletter?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Newsletter bestätigen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Dokumentenupload__c</fullName>
        <formula>$Label.SiteRoot + '/MissingDocuments?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Dokumentenupload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Rueckrufformular__c</fullName>
        <formula>$Label.SiteRoot + '/RueckrufFormular?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Rückrufformular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Linked_Contract__c</fullName>
        <label>Fondsgebundener Vertrag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsubscribe_Link__c</fullName>
        <formula>IF(Product__c = 'Dieselskandal',IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/abmelden-001/' + Id,'https://forms.cloudworx.agency/verbraucherrechte24/002/' + Id),IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/abmelden-001/' + Id,'https://forms.cloudworx.agency/verbraucherrechte24/002/' + Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zur Abmeldung - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Valuation_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Valuation_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Valuation_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valuation_Date_Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Date__c</fullName>
        <defaultValue>IF(MONTH(TODAY())&lt; 12,IF(DAY(TODAY())&gt;15,DATE(YEAR(TODAY()),MONTH(TODAY()+16),1),DATE(YEAR(TODAY()),MONTH(TODAY()),1)),IF(DAY(TODAY())&gt;15,DATE(YEAR(TODAY()+32),1,1),DATE(YEAR(TODAY()),MONTH(TODAY()),1)))</defaultValue>
        <label>Bewertungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_Affected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fahrzeug betroffen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand_Name__c</fullName>
        <label>Fahrzeugmarke</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fahrzeughersteller</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Fahrzeughersteller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Anfragen (Fahrzeughersteller)</relationshipLabel>
        <relationshipName>Opportunities_Fahrzeughersteller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Identification_Number__c</fullName>
        <label>Fahrzeug Identifizierungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Keeper_City__c</fullName>
        <label>Stadt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Keeper_Country__c</fullName>
        <label>Land</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Keeper_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Keeper_Postal_Code__c</fullName>
        <label>Postleitzahl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Keeper_Street__c</fullName>
        <label>Straße</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Fahrzeugtyp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versicherung_LV_RV__c</fullName>
        <label>Versicherung (LV/RV)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Versicherungen_LV_RV</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vollmacht_Email_TemplateID__c</fullName>
        <inlineHelpText>Do not manipulate it manually. Used to keep track of pending docgen operations and subsequent email sending.</inlineHelpText>
        <label>Vollmacht Email TemplateID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vollmacht_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vollmacht sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X15_Prozent_von_Kaufpreis__c</fullName>
        <formula>Purchase_Price__c *0.15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>15 Prozent von Kaufpreis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zufriedenheit_Renditenentwicklung__c</fullName>
        <label>Zufriedenheit Renditenentwicklung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zufriedenheit_Renditenentwicklung</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Token__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_Date_Old_Org__c</field>
            <operation>lessThan</operation>
            <value>1/1/2019 12:00 AM</value>
        </filters>
        <label>All Anfragen</label>
    </listViews>
    <listViews>
        <fullName>All_Anfragen</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Number__c</columns>
        <columns>Reference__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>AdWords_Source__c</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Mandating_Date__c</columns>
        <columns>Partner_External_Id__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>//Alle Anfragen</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>FZ_Neue_Anfragen</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Finanzierung</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>New,Check</value>
        </filters>
        <filters>
            <field>Backoffice__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>FZ_Neue Anfragen</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>K_Neue_BO_DG_RSV_Numme_BRITTA_II</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Number__c</columns>
        <columns>Financing_Type__c</columns>
        <columns>Days_Since_Last_Stage_Change__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Check</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Dieselskandal</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>VH24</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <filters>
            <field>Financing_Type__c</field>
            <operation>equals</operation>
            <value>,Eigenkapital</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Has_Legal_Protection_Insurance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Backoffice__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Callcenter__c</field>
            <operation>equals</operation>
        </filters>
        <label>K_Neue BO DG RSV + Numme--&gt; BRITTA II</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>K_Neue_BO_DG_RSV_und_Numme_BRITTA</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Financing_Type__c</columns>
        <columns>Days_Since_Last_Stage_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Check</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>VH24</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <filters>
            <field>Backoffice__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Financing_Type__c</field>
            <operation>equals</operation>
            <value>Leasing,Finanzierung</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Has_Legal_Protection_Insurance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Phone__c</field>
            <operation>equals</operation>
        </filters>
        <label>K_Neue BO KFZW RSV + ohne Nummer</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>K_Neue_BO_DG_RSV_und_Numme_BRITTA1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Financing_Type__c</columns>
        <columns>Days_Since_Last_Stage_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Check</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>VH24</value>
        </filters>
        <filters>
            <field>Sales_Type__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <filters>
            <field>Backoffice__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Financing_Type__c</field>
            <operation>equals</operation>
            <value>,Eigenkapital</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Has_Legal_Protection_Insurance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Phone__c</field>
            <operation>equals</operation>
        </filters>
        <label>K_Neue BO DG RSV + ohne  Numme</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
</CustomObject>